<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/packageTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/op_enter_package_name" />

    <EditText
        android:id="@+id/packageEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/packageTitleLabel"
        android:hint="@string/op_package_hint" />

    <CheckBox
        android:id="@+id/wildcardCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/packageEditText"
        android:text="@string/op_include_subpackage_flag" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wildcardCheckBox"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/op_cancel" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/op_save" />

    </LinearLayout>


</RelativeLayout>
