<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/op_protection_status"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/checkServiceRunningLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op_not_working"
            android:textSize="20dp" />

    </LinearLayout>


    <Button
        android:id="@+id/opEnableProtectionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/opEnableProtectionBtnLabel" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:padding="12dp"
        android:orientation="vertical"
        android:id="@+id/statsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/eventborder">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/op_statistics"
            android:textStyle="bold"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/monthlyDetectedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detectedCount"
            android:textSize="18dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/suspectedAppsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suspectedAppCount"
            android:textSize="18dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/eventProcessedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventCount"
            android:textSize="18dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />


    </LinearLayout>

</LinearLayout>
