<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#D9676767"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#d9d5b868"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/op_overlay_detected_title"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/iconImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/ic_question_icon"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/odOffenderNameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/op_malware_package_example"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="18dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/odIgnoreButton"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="@string/op_warning_ignore" />

                    <Button
                        android:id="@+id/odIgnoreOnce"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/op_ignore_once" />

                    <Button
                        android:id="@+id/odUninstallButton"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:text="@string/op_warning_uninstall" />

                </LinearLayout>

                <TextView
                    android:id="@+id/uninstallWarningTextView"
                    android:padding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/op_uninstallWarning"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>